# app-update

./: Cargo.toml
.github/workflows/: ci.yml  deploy-worker.yml  release.yml
app-bundler/: Cargo.toml
app-bundler/src/: main.rs
app-update/: Cargo.toml
app-update-cli/: Cargo.toml
app-update-cli/src/: main.rs
app-update-client/: Cargo.toml
app-update-client/src/: lib.rs
app-update-models/: Cargo.toml
app-update-server/: Cargo.toml  wrangler.toml
app-update-server/migrations/: 00001.sql
app-update-server/src/: lib.rs
app-update/src/: lib.rs
