[workspace]
members = [
    "app-update",
    "app-update-server",
    "app-update-cli",
    "app-update-client",
    "app-update-models",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["macros"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
