[package]
name = "app-update"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
semver = { version = "1", features = ["serde"] }
self-replace = "1.5"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "time"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
